[gd_scene load_steps=3 format=3 uid="uid://qg7q3a1ubxp7"]

[ext_resource type="Texture2D" uid="uid://be7owswhnwf4y" path="res://assets-sistema/flecha-ir-para-atras-historias.png" id="1_u1c0d"]
[ext_resource type="Script" path="res://libro.gd" id="1_yhea7"]

[node name="Libro" type="Node2D"]
z_index = 4
script = ExtResource("1_yhea7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 800.0
color = Color(0.623183, 0.999127, 0.762443, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 471.0
offset_top = 195.0
offset_right = 677.0
offset_bottom = 873.0

[node name="Cap1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Capitulo 1"

[node name="Cap2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Capitulo 2"

[node name="Cap3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Capitulo 3"

[node name="Cap4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Capitulo 4"

[node name="Cap5" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Capitulo 5"

[node name="Atras" type="Button" parent="."]
offset_left = 28.0
offset_top = 677.0
offset_right = 120.0
offset_bottom = 770.0
icon = ExtResource("1_u1c0d")

[connection signal="pressed" from="VBoxContainer/Cap1" to="." method="_on_cap_1_pressed"]
[connection signal="pressed" from="Atras" to="." method="_on_button_pressed"]
